test/conformance/chainsaw/webhooks/unknown-kind/policy-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: unknown
spec:
  background: false
  rules:
    - name: unknown
      match:
        any:
          - resources:
              kinds:
                - Foo
      validate:
        failureAction: Audit
        message: 'The label `team` is required.'
        pattern:
          metadata:
            labels:
              team: '?*'
