test/conformance/chainsaw/webhooks/unknown-kind/01-unknown-kind.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: unknown-kind
spec:
  try:
  - apply:
      file: policy-1.yaml
      check:
        (error == null): false
