test/conformance/chainsaw/webhooks/unknown-kind/02-unknown-kind-subresource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: unknown-kind-subresource
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: policy-2.yaml
