test/conformance/chainsaw/webhooks/unknown-kind/03-wrong-version.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: wrong-version
spec:
  timeouts: {}
  try:
  - apply:
      check:
        (error != null): true
      file: policy-3.yaml
