test/conformance/chainsaw/webhooks/unknown-kind/04-unknown-subresource.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: unknown-subresource
spec:
  try:
  - apply:
      file: policy-4.yaml
      check:
        (error == null): false
