test/conformance/chainsaw/webhooks/unknown-kind/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: unknown-kind
spec:
  concurrent: true
  namespace: default
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-1.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-2.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-3.yaml
  - name: step-04
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-4.yaml
